add branch to config yml

--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
   name: github
   repo: chrysillala/recipe-blog
+  branch: main
 
 media_folder: "static/uploads"
 public_folder: "/uploads"
