--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -9,7 +9,7 @@ public_folder: "/uploads"
 collections:
   - name: "posts"
     label: "Posts"
-    folder: "posts"
+    folder: "blog"
     create: true
     slug: "{{slug}}"
     fields:
