--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -7,8 +7,8 @@ media_folder: "static/uploads"
 public_folder: "/uploads"
 
 collections:
-  - name: "posts"
-    label: "Posts"
+  - name: "blogs"
+    label: "Blogs"
     folder: "blog"
     create: true
     slug: "{{slug}}"
